tests/baselines/reference/importDeferInvalidDefault.errors.txt
b.ts(1,14): error TS18058: Default imports are not allowed in a deferred import.


==== a.ts (0 errors) ====
    export default function foo() {
        console.log("foo from a");
    }
    
==== b.ts (1 errors) ====
    import defer foo from "a";
                 ~~~
!!! error TS18058: Default imports are not allowed in a deferred import.
    
    foo();